# aibuild-kpx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/agents/: c-checker.agent.md  e-judge.agent.md  g-checker.agent.md  g-writer.agent.md  o-checker.agent.md  orin.agent.md
.github/workflows/: ci.yml
bench/: results.json  runner.py
bench_real/: README.md  __init__.py  aggregate.py  cost_cap.py  decisions_template.md  judge_prompt.md  render_results_panel.py  run_all_github.py  run_r7_xjudge.py  run_r8_retry.py  runner.py  schema.py  tokenizers.py  variants.py
bench_real/adapters/: __init__.py  anthropic.py  github_models.py  google.py  mock.py  openai.py
bench_real/analysis/: __init__.py  code_preservation.py  realistic_prompts.py  run_code_analysis.py
bench_real/legacy/: __init__.py  corpus.py  results.json  runner.py
bench_real/model_compare/: __init__.py  run.py
bench_real/runs/: .gitignore
bench_real/scorers/: __init__.py  chrf.py  code_sandbox.py  llm_judge.py  rouge.py  rule_based.py
bench_real/tasks/: __init__.py  t01_coding.json  t03_docs.json  t04_json.json  t06_safety.json  t07_translation.json
bench_real/views/: __init__.py  _common.py  p1_dev_report.py  p2_exec_summary.py  p3_safety_audit.py  p4_calibration.py  p6_i18n_report.py  (+1 more)
docs/: METHODS.md  benchmark-plan.html  benchmark-results.html  kpx_프로젝트_상세_설명.md  methods.html  project-overview.html
kpx/: __init__.py  audit.py  cli.py  compress.py  methods.py  tokens.py
tests/: test_kpx.py  test_regressions_v020.py  test_render_results_panel.py
(+74 files in other folders)
