[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kpx"
version = "0.2.0"
description = "Karpathy-Optimization: prompt-side LLM token optimization toolkit (complement to rtk)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "kpx contributors"}]
keywords = ["llm", "tokens", "prompt", "optimization", "karpathy", "context-engineering"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
dev = ["pytest>=7", "PyYAML>=6"]

[project.scripts]
kpx = "kpx.cli:main"

[project.urls]
Homepage = "https://github.com/kpx-ai/kpx"
Issues = "https://github.com/kpx-ai/kpx/issues"
Methods = "https://github.com/kpx-ai/kpx/blob/main/docs/METHODS.md"
Inspiration = "https://github.com/rtk-ai/rtk"

[tool.setuptools.packages.find]
where = ["."]
include = ["kpx*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
